plugins {
    id 'org.jetbrains.intellij' version '1.14.1'
}

group 'pers.zlf'

targetCompatibility = 11

intellij {
    version = '2021.2.3'
    plugins = ['java']
    updateSinceUntilBuild = false
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.freemarker:freemarker:2.3.23'
    implementation ('org.eclipse.jgit:org.eclipse.jgit:6.5.0.202303070854-r'){
        exclude group:"org.slf4j"
    }
}
